engine/scripting/native_api/dse_api.h

// ============================================================
// Context Setup — 引擎初始化时调用一次
// ============================================================

DSE_CAPI void dse_native_api_init(
    void* world,           // World*
    void* asset_manager,   // AssetManager*
    void* audio_system,    // AudioSystem* (可为 nullptr)
    void  (*quit_fn)(void),
    void  (*set_title_fn)(const char*),
    float (*get_fps_fn)(void),
    void  (*set_fps_fn)(float),
    int   (*get_draw_calls_fn)(void)   // 可为 nullptr
);
// ============================================================
// Extended Context Setup — 扩展上下文（metrics 回调 + floating origin）
// ============================================================

DSE_CAPI void dse_native_api_init_ext(
    int   (*get_max_batch_sprites_fn)(void),
    int   (*get_sprite_count_fn)(void),
    int   (*get_gpu_driven_active_fn)(void),
    int   (*get_gpu_indirect_draw_count_fn)(void),
    int   (*get_gpu_total_instances_fn)(void),
    void* floating_origin);
DSE_CAPI uint32_t dse_dssl_create_instance(const char* path);
DSE_CAPI void  dse_dssl_set_float(uint32_t instance, const char* name, float value);
DSE_CAPI void  dse_dssl_set_color(uint32_t instance, const char* name, float r, float g, float b, float a);
DSE_CAPI void  dse_dssl_set_vec3(uint32_t instance, const char* name, float x, float y, float z);
DSE_CAPI void  dse_dssl_set_texture(uint32_t instance, const char* name, const char* path);
DSE_CAPI void  dse_dssl_set_texture_handle(uint32_t instance, const char* name, uint32_t handle);
DSE_CAPI void  dse_dssl_apply_material(uint32_t e, uint32_t instance);
DSE_CAPI float dse_dssl_get_float(uint32_t instance, const char* name);
DSE_CAPI void  dse_dssl_get_color(uint32_t instance, const char* name, float* out_rgba);
// ============================================================
// Meshlet — Cluster 渲染系统
// ============================================================

// build: positions = flat xyz triplets (count = pos_count * 3), indices = uint32 array
DSE_CAPI uint32_t dse_meshlet_build(const float* positions, int pos_count,
                                    const uint32_t* indices, int idx_count,
                                    uint32_t max_vertices, uint32_t max_triangles);
DSE_CAPI int   dse_meshlet_serialize(uint32_t handle, const char* path);
DSE_CAPI uint32_t dse_meshlet_deserialize(const char* path);
DSE_CAPI void  dse_meshlet_destroy(uint32_t handle);
DSE_CAPI void  dse_meshlet_get_info(uint32_t handle, int* out_meshlets, int* out_vertices,
                                    int* out_indices, int* out_meshlet_vertices);
DSE_CAPI uint32_t dse_meshlet_cull_create(void);
DSE_CAPI void  dse_meshlet_cull_destroy(uint32_t cull_handle);
DSE_CAPI uint32_t dse_meshlet_cull_register(uint32_t cull_handle, uint32_t meshlet_handle);
DSE_CAPI void  dse_meshlet_cull_unregister(uint32_t cull_handle, uint32_t reg_handle);
DSE_CAPI void  dse_meshlet_cull_begin_frame(uint32_t cull_handle);
DSE_CAPI void  dse_meshlet_cull_add_instance(uint32_t cull_handle, uint32_t reg_handle,
                                            const float* matrix16);
// prepare: vp_matrix = 16 floats, returns instance count
DSE_CAPI uint32_t dse_meshlet_cull_prepare(uint32_t cull_handle, const float* vp_matrix16,
                                           float cam_x, float cam_y, float cam_z);
// execute_cpu: vp_matrix = 16 floats, flags: bit0=frustum, bit1=occlusion, bit2=cone
DSE_CAPI uint32_t dse_meshlet_cull_execute_cpu(uint32_t cull_handle, const float* vp_matrix16,
                                                float cam_x, float cam_y, float cam_z,
                                                uint32_t flags);
DSE_CAPI void  dse_meshlet_cull_stats(uint32_t cull_handle, int* out_total, int* out_visible,
                                      int* out_meshes, int* out_instances);
// ============================================================
// World Systems（Spline / Ocean / Editor / VSM / EQS / Distribution）
// ============================================================

// Spline
DSE_CAPI int   dse_spline_init(void);
DSE_CAPI void  dse_spline_shutdown(void);
DSE_CAPI uint32_t dse_spline_create(const char* name);
DSE_CAPI void  dse_spline_destroy(uint32_t spline);
DSE_CAPI void  dse_spline_add_point(uint32_t spline, float x, float y, float z, float width);
DSE_CAPI void  dse_spline_set_point(uint32_t spline, int index, float x, float y, float z, float width);
DSE_CAPI void  dse_spline_remove_point(uint32_t spline, int index);
DSE_CAPI int   dse_spline_get_point_count(uint32_t spline);
DSE_CAPI float dse_spline_get_length(uint32_t spline);
DSE_CAPI void  dse_spline_evaluate(uint32_t spline, float t, float* out_xyz);
DSE_CAPI void  dse_spline_evaluate_distance(uint32_t spline, float dist, float* out_xyz);
DSE_CAPI float dse_spline_find_nearest(uint32_t spline, float x, float y, float z);
DSE_CAPI int   dse_spline_gen_road(uint32_t spline, float segment_length, int width_segments);
DSE_CAPI int   dse_spline_gen_river(uint32_t spline, float segment_length, float depth);
// Ocean
DSE_CAPI int   dse_ocean_init(int fft_resolution, float tile_size, float wind_speed, float choppiness);
DSE_CAPI void  dse_ocean_shutdown(void);
DSE_CAPI void  dse_ocean_update(float time, float cam_x, float cam_y, float cam_z);
DSE_CAPI float dse_ocean_get_height(float x, float z);
DSE_CAPI void  dse_ocean_get_normal(float x, float z, float* out_xyz);
DSE_CAPI float dse_ocean_get_foam(float x, float z);
DSE_CAPI void  dse_ocean_set_wind(float speed, float dx, float dz);
DSE_CAPI void  dse_ocean_set_choppiness(float choppiness);
DSE_CAPI void  dse_ocean_get_stats(int* out_total_tiles, int* out_visible_tiles,
                                   int* out_fft_res, float* out_max_height);
DSE_CAPI int   dse_ocean_get_lod_count(void);
// Editor helpers
DSE_CAPI int   dse_editor_init(void);
DSE_CAPI void  dse_editor_shutdown(void);
DSE_CAPI int   dse_editor_terrain_brush(int op, float x, float y, float z, float radius,
                                        float strength, float falloff);
DSE_CAPI void  dse_editor_brush_preview(float x, float y, float z, float radius,
                                        float* out_min_x, float* out_min_y,
                                        float* out_max_x, float* out_max_y);
DSE_CAPI int   dse_editor_place_foliage(float x, float y, float z, float radius,
                                        float density, const char* mesh_path);
DSE_CAPI int   dse_editor_erase_foliage(float x, float y, float z, float radius);
DSE_CAPI int   dse_editor_get_foliage_count(void);
DSE_CAPI int   dse_editor_begin_road(float width);
DSE_CAPI void  dse_editor_add_road_point(uint32_t session, float x, float y, float z);
DSE_CAPI void  dse_editor_end_road(uint32_t session);
DSE_CAPI void  dse_editor_update_partition_vis(float cam_x, float cam_y, float cam_z, float cell_size);
DSE_CAPI int   dse_editor_get_cell_count(void);
DSE_CAPI int   dse_editor_undo(void);
DSE_CAPI int   dse_editor_redo(void);
// VSM (Virtual Shadow Maps)
DSE_CAPI int   dse_vsm_init(uint32_t virtual_resolution, uint32_t page_size,
                            uint32_t pool_pages, uint32_t clipmap_levels);
DSE_CAPI void  dse_vsm_shutdown(void);
DSE_CAPI uint32_t dse_vsm_register_light(uint32_t light_id, int is_directional,
                                         float dx, float dy, float dz);
DSE_CAPI void  dse_vsm_unregister_light(uint32_t light_id);
DSE_CAPI void  dse_vsm_begin_frame(uint32_t frame, float cam_x, float cam_y, float cam_z);
DSE_CAPI void  dse_vsm_end_frame(void);
DSE_CAPI void  dse_vsm_invalidate(uint32_t light_id,
                                  float min_x, float min_y, float min_z,
                                  float max_x, float max_y, float max_z);
DSE_CAPI void  dse_vsm_mark_page_rendered(uint32_t vx, uint32_t vy, uint32_t mip, uint32_t light_id);
DSE_CAPI int   dse_vsm_get_pages_to_render(void);
DSE_CAPI int   dse_vsm_lookup_page(uint32_t vx, uint32_t vy, uint32_t mip, uint32_t light_id,
                                   uint32_t* out_px, uint32_t* out_py);
DSE_CAPI void  dse_vsm_get_stats(int* out_total, int* out_mapped, int* out_dirty,
                                 int* out_rendered, int* out_cache_hit, int* out_pool_usage);