GameScripts/DSEngine.Runtime/Generated/NativeManual.gen.cs


    [LibraryImport(Lib, EntryPoint = "dse_dssl_create_instance", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial uint dse_dssl_create_instance(string path);

    [LibraryImport(Lib, EntryPoint = "dse_dssl_set_float", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_dssl_set_float(uint instance, string name, float value);

    [LibraryImport(Lib, EntryPoint = "dse_dssl_set_color", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_dssl_set_color(uint instance, string name, float r, float g, float b, float a);

    [LibraryImport(Lib, EntryPoint = "dse_dssl_set_vec3", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_dssl_set_vec3(uint instance, string name, float x, float y, float z);

    [LibraryImport(Lib, EntryPoint = "dse_dssl_set_texture", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_dssl_set_texture(uint instance, string name, string path);

    [LibraryImport(Lib, EntryPoint = "dse_dssl_set_texture_handle", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_dssl_set_texture_handle(uint instance, string name, uint handle);

    [LibraryImport(Lib, EntryPoint = "dse_dssl_apply_material")]
    internal static partial void dse_dssl_apply_material(uint e, uint instance);

    [LibraryImport(Lib, EntryPoint = "dse_dssl_get_float", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial float dse_dssl_get_float(uint instance, string name);

    [LibraryImport(Lib, EntryPoint = "dse_dssl_get_color", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_dssl_get_color(uint instance, string name, [Out] float[] outRgba);

    [LibraryImport(Lib, EntryPoint = "dse_meshlet_build")]
    internal static partial uint dse_meshlet_build(float[] positions, int posCount, uint[] indices, int idxCount, uint maxVertices, uint maxTriangles);

    [LibraryImport(Lib, EntryPoint = "dse_meshlet_serialize", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int dse_meshlet_serialize(uint handle, string path);

    [LibraryImport(Lib, EntryPoint = "dse_meshlet_deserialize", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial uint dse_meshlet_deserialize(string path);

    [LibraryImport(Lib, EntryPoint = "dse_meshlet_destroy")]
    internal static partial void dse_meshlet_destroy(uint handle);

    [LibraryImport(Lib, EntryPoint = "dse_meshlet_get_info")]
    internal static partial void dse_meshlet_get_info(uint handle, out int outMeshlets, out int outVertices, out int outIndices, out int outMeshletVertices);

    [LibraryImport(Lib, EntryPoint = "dse_meshlet_cull_create")]
    internal static partial uint dse_meshlet_cull_create();

    [LibraryImport(Lib, EntryPoint = "dse_meshlet_cull_destroy")]
    internal static partial void dse_meshlet_cull_destroy(uint cullHandle);

    [LibraryImport(Lib, EntryPoint = "dse_meshlet_cull_register")]
    internal static partial uint dse_meshlet_cull_register(uint cullHandle, uint meshletHandle);

    [LibraryImport(Lib, EntryPoint = "dse_meshlet_cull_unregister")]
    internal static partial void dse_meshlet_cull_unregister(uint cullHandle, uint regHandle);

    [LibraryImport(Lib, EntryPoint = "dse_meshlet_cull_begin_frame")]
    internal static partial void dse_meshlet_cull_begin_frame(uint cullHandle);

    [LibraryImport(Lib, EntryPoint = "dse_meshlet_cull_add_instance")]
    internal static partial void dse_meshlet_cull_add_instance(uint cullHandle, uint regHandle, float[] matrix16);

    [LibraryImport(Lib, EntryPoint = "dse_meshlet_cull_prepare")]
    internal static partial uint dse_meshlet_cull_prepare(uint cullHandle, float[] vpMatrix16, float camX, float camY, float camZ);

    [LibraryImport(Lib, EntryPoint = "dse_meshlet_cull_execute_cpu")]
    internal static partial uint dse_meshlet_cull_execute_cpu(uint cullHandle, float[] vpMatrix16, float camX, float camY, float camZ, uint flags);

    [LibraryImport(Lib, EntryPoint = "dse_meshlet_cull_stats")]
    internal static partial void dse_meshlet_cull_stats(uint cullHandle, out int outTotal, out int outVisible, out int outMeshes, out int outInstances);

    [LibraryImport(Lib, EntryPoint = "dse_spline_init")]
    internal static partial int dse_spline_init();

    [LibraryImport(Lib, EntryPoint = "dse_spline_shutdown")]
    internal static partial void dse_spline_shutdown();

    [LibraryImport(Lib, EntryPoint = "dse_spline_create", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial uint dse_spline_create(string name);

    [LibraryImport(Lib, EntryPoint = "dse_spline_destroy")]
    internal static partial void dse_spline_destroy(uint spline);

    [LibraryImport(Lib, EntryPoint = "dse_spline_add_point")]
    internal static partial void dse_spline_add_point(uint spline, float x, float y, float z, float width);

    [LibraryImport(Lib, EntryPoint = "dse_spline_set_point")]
    internal static partial void dse_spline_set_point(uint spline, int index, float x, float y, float z, float width);

    [LibraryImport(Lib, EntryPoint = "dse_spline_remove_point")]
    internal static partial void dse_spline_remove_point(uint spline, int index);

    [LibraryImport(Lib, EntryPoint = "dse_spline_get_point_count")]
    internal static partial int dse_spline_get_point_count(uint spline);

    [LibraryImport(Lib, EntryPoint = "dse_spline_get_length")]
    internal static partial float dse_spline_get_length(uint spline);

    [LibraryImport(Lib, EntryPoint = "dse_spline_evaluate")]
    internal static partial void dse_spline_evaluate(uint spline, float t, [Out] float[] outXyz);

    [LibraryImport(Lib, EntryPoint = "dse_spline_evaluate_distance")]
    internal static partial void dse_spline_evaluate_distance(uint spline, float dist, [Out] float[] outXyz);

    [LibraryImport(Lib, EntryPoint = "dse_spline_find_nearest")]
    internal static partial float dse_spline_find_nearest(uint spline, float x, float y, float z);

    [LibraryImport(Lib, EntryPoint = "dse_spline_gen_road")]
    internal static partial int dse_spline_gen_road(uint spline, float segmentLength, int widthSegments);

    [LibraryImport(Lib, EntryPoint = "dse_spline_gen_river")]
    internal static partial int dse_spline_gen_river(uint spline, float segmentLength, float depth);

    [LibraryImport(Lib, EntryPoint = "dse_ocean_init")]
    internal static partial int dse_ocean_init(int fftResolution, float tileSize, float windSpeed, float choppiness);

    [LibraryImport(Lib, EntryPoint = "dse_ocean_shutdown")]
    internal static partial void dse_ocean_shutdown();

    [LibraryImport(Lib, EntryPoint = "dse_ocean_update")]
    internal static partial void dse_ocean_update(float time, float camX, float camY, float camZ);

    [LibraryImport(Lib, EntryPoint = "dse_ocean_get_height")]
    internal static partial float dse_ocean_get_height(float x, float z);

    [LibraryImport(Lib, EntryPoint = "dse_ocean_get_normal")]
    internal static partial void dse_ocean_get_normal(float x, float z, [Out] float[] outXyz);

    [LibraryImport(Lib, EntryPoint = "dse_ocean_get_foam")]
    internal static partial float dse_ocean_get_foam(float x, float z);

    [LibraryImport(Lib, EntryPoint = "dse_ocean_set_wind")]
    internal static partial void dse_ocean_set_wind(float speed, float dx, float dz);

    [LibraryImport(Lib, EntryPoint = "dse_ocean_set_choppiness")]
    internal static partial void dse_ocean_set_choppiness(float choppiness);

    [LibraryImport(Lib, EntryPoint = "dse_ocean_get_stats")]
    internal static partial void dse_ocean_get_stats(out int outTotalTiles, out int outVisibleTiles, out int outFftRes, out float outMaxHeight);

    [LibraryImport(Lib, EntryPoint = "dse_ocean_get_lod_count")]
    internal static partial int dse_ocean_get_lod_count();

    [LibraryImport(Lib, EntryPoint = "dse_editor_init")]
    internal static partial int dse_editor_init();

    [LibraryImport(Lib, EntryPoint = "dse_editor_shutdown")]
    internal static partial void dse_editor_shutdown();

    [LibraryImport(Lib, EntryPoint = "dse_editor_terrain_brush")]
    internal static partial int dse_editor_terrain_brush(int op, float x, float y, float z, float radius, float strength, float falloff);

    [LibraryImport(Lib, EntryPoint = "dse_editor_brush_preview")]
    internal static partial void dse_editor_brush_preview(float x, float y, float z, float radius, out float outMinX, out float outMinY, out float outMaxX, out float outMaxY);

    [LibraryImport(Lib, EntryPoint = "dse_editor_place_foliage", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int dse_editor_place_foliage(float x, float y, float z, float radius, float density, string meshPath);

    [LibraryImport(Lib, EntryPoint = "dse_editor_erase_foliage")]
    internal static partial int dse_editor_erase_foliage(float x, float y, float z, float radius);

    [LibraryImport(Lib, EntryPoint = "dse_editor_get_foliage_count")]
    internal static partial int dse_editor_get_foliage_count();

    [LibraryImport(Lib, EntryPoint = "dse_editor_begin_road")]
    internal static partial int dse_editor_begin_road(float width);

    [LibraryImport(Lib, EntryPoint = "dse_editor_add_road_point")]
    internal static partial void dse_editor_add_road_point(uint session, float x, float y, float z);

    [LibraryImport(Lib, EntryPoint = "dse_editor_end_road")]
    internal static partial void dse_editor_end_road(uint session);

    [LibraryImport(Lib, EntryPoint = "dse_editor_update_partition_vis")]
    internal static partial void dse_editor_update_partition_vis(float camX, float camY, float camZ, float cellSize);

    [LibraryImport(Lib, EntryPoint = "dse_editor_get_cell_count")]
    internal static partial int dse_editor_get_cell_count();

    [LibraryImport(Lib, EntryPoint = "dse_editor_undo")]
    internal static partial int dse_editor_undo();

    [LibraryImport(Lib, EntryPoint = "dse_editor_redo")]
    internal static partial int dse_editor_redo();

    [LibraryImport(Lib, EntryPoint = "dse_vsm_init")]
    internal static partial int dse_vsm_init(uint virtualResolution, uint pageSize, uint poolPages, uint clipmapLevels);

    [LibraryImport(Lib, EntryPoint = "dse_vsm_shutdown")]
    internal static partial void dse_vsm_shutdown();

    [LibraryImport(Lib, EntryPoint = "dse_vsm_register_light")]
    internal static partial uint dse_vsm_register_light(uint lightId, int isDirectional, float dx, float dy, float dz);

    [LibraryImport(Lib, EntryPoint = "dse_vsm_unregister_light")]
    internal static partial void dse_vsm_unregister_light(uint lightId);

    [LibraryImport(Lib, EntryPoint = "dse_vsm_begin_frame")]
    internal static partial void dse_vsm_begin_frame(uint frame, float camX, float camY, float camZ);

    [LibraryImport(Lib, EntryPoint = "dse_vsm_end_frame")]
    internal static partial void dse_vsm_end_frame();

    [LibraryImport(Lib, EntryPoint = "dse_vsm_invalidate")]
    internal static partial void dse_vsm_invalidate(uint lightId, float minX, float minY, float minZ, float maxX, float maxY, float maxZ);

    [LibraryImport(Lib, EntryPoint = "dse_vsm_mark_page_rendered")]
    internal static partial void dse_vsm_mark_page_rendered(uint vx, uint vy, uint mip, uint lightId);

    [LibraryImport(Lib, EntryPoint = "dse_vsm_get_pages_to_render")]
    internal static partial int dse_vsm_get_pages_to_render();

    [LibraryImport(Lib, EntryPoint = "dse_vsm_lookup_page")]
    internal static partial int dse_vsm_lookup_page(uint vx, uint vy, uint mip, uint lightId, out uint outPx, out uint outPy);

    [LibraryImport(Lib, EntryPoint = "dse_vsm_get_stats")]
    internal static partial void dse_vsm_get_stats(out int outTotal, out int outMapped, out int outDirty, out int outRendered, out int outCacheHit, out int outPoolUsage);
